--- a/Updater/TrinityCreatorUpdater.csproj
+++ b/Updater/TrinityCreatorUpdater.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{43370AC0-0F89-4FCA-BC85-C6412E785DA6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Updater</RootNamespace>
-    <AssemblyName>Updater</AssemblyName>
+    <RootNamespace>TrinityCreatorUpdater</RootNamespace>
+    <AssemblyName>TrinityCreatorUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
