SQL query generation & string to currency
ArmorWeaponItem values not done yet.

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -57,6 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="ArmorWeaponItem.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemBonding.cs" />
     <Compile Include="ItemPage.xaml.cs">
       <DependentUpon>ItemPage.xaml</DependentUpon>
     </Compile>
