--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 TrinityCreator/ClassDiagram1.cd
+TrinityCreator/bin/Release/TrinityCreator.vshost.exe.manifest
+TrinityCreator/bin/Release/TrinityCreator.exe.config
+Updater/bin/Release/TrinityCreatorUpdater.exe.config
+TrinityCreator/bin/Release/TrinityCreator.vshost.exe.config
+TrinityCreator/bin/Release/TrinityCreator.vshost.exe
