--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -13,6 +13,12 @@
             <setting name="nextid_item" serializeAs="String">
                 <value>500000</value>
             </setting>
+            <setting name="viewUnfinishedCreators" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TrinityCreator.Properties.Settings>
     </userSettings>
 </configuration>
