--- a/TrinityCreator/Properties/Settings.settings
+++ b/TrinityCreator/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="nextid_item" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">500000</Value>
     </Setting>
+    <Setting Name="viewUnfinishedCreators" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
