--- a/TrinityCreator/Properties/Settings.settings
+++ b/TrinityCreator/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="worldDb" Type="MySql.Data.MySqlClient.MySqlConnectionStringBuilder" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
