Some work on loading ItemPage from db

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Database\DbConfigWindow.xaml.cs">
       <DependentUpon>DbConfigWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Database\ItemTemplateQuery.cs" />
     <Compile Include="DynamicDataControl.xaml.cs">
       <DependentUpon>DynamicDataControl.xaml</DependentUpon>
     </Compile>
