--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,4 @@ TrinityCreator/bin/Release/TrinityCreator.exe.config
 Updater/bin/Release/TrinityCreatorUpdater.exe.config
 TrinityCreator/bin/Release/TrinityCreator.vshost.exe.config
 TrinityCreator/bin/Release/TrinityCreator.vshost.exe
+*.wixpdb
