--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -1,29 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="TrinityCreator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <userSettings>
-        <TrinityCreator.Properties.Settings>
-            <setting name="nextid_item" serializeAs="String">
-                <value>500000</value>
-            </setting>
-            <setting name="viewUnfinishedCreators" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UpgradeRequired" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </TrinityCreator.Properties.Settings>
-    </userSettings>
-<system.data>
+  <configSections>
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="TrinityCreator.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <userSettings>
+    <TrinityCreator.Properties.Settings>
+      <setting name="nextid_item" serializeAs="String">
+        <value>500000</value>
+      </setting>
+      <setting name="viewUnfinishedCreators" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </TrinityCreator.Properties.Settings>
+  </userSettings>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient"
+           description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+</configuration>
