--- a/TrinityCreator/Properties/Settings.settings
+++ b/TrinityCreator/Properties/Settings.settings
@@ -1,5 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TrinityCreator.Properties" GeneratedClassName="Settings">
+
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
+              GeneratedClassNamespace="TrinityCreator.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="nextid_item" Type="System.Int32" Scope="User">
