Quest images added

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -222,6 +222,18 @@
   <ItemGroup>
     <Resource Include="tclogo.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\DailyActiveQuestIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\DailyQuestIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IncompleteQuestIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\QuestGreeting.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
