Work on quests & wow fonts

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -23,6 +23,9 @@
       <setting name="UpgradeRequired" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="nextid_quest" serializeAs="String">
+        <value>500000</value>
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   <system.data>
