--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -191,7 +191,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="Resources\Faction.dbc.csv" />
+    <Resource Include="Resources\ARIALN.TTF" />
+    <Resource Include="Resources\Faction.dbc.csv" />
+    <Resource Include="Resources\FRIZQT__.TTF" />
+    <Resource Include="Resources\MORPHEUS.TTF" />
+    <Resource Include="Resources\SKURRI.TTF" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
