Added support for cMangos 1.12

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -26,6 +26,9 @@
       <setting name="nextid_quest" serializeAs="String">
         <value>500000</value>
       </setting>
+      <setting name="emulator" serializeAs="String">
+        <value>0</value>
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   <system.data>
