Find item display id in lookup tool
- DB config settings save correctly
- New release build

--- a/TrinityCreator/Properties/Settings.settings
+++ b/TrinityCreator/Properties/Settings.settings
@@ -11,7 +11,7 @@
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="worldDb" Type="MySql.Data.MySqlClient.MySqlConnectionStringBuilder" Scope="User">
+    <Setting Name="worldDb" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="nextid_quest" Type="System.Int32" Scope="User">
