DBC Configuration & extraction
- Run application as admin (may need to write in Program Files)
- Removed test target from lookup tool
- Correctly assign App.LookupTool

--- a/TrinityCreator/App.config
+++ b/TrinityCreator/App.config
@@ -32,6 +32,9 @@
       <setting name="emulator" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="DbcDir" serializeAs="String">
+        <value />
+      </setting>
     </TrinityCreator.Properties.Settings>
   </userSettings>
   <system.data>
