--- a/TrinityCreator/Properties/Settings.settings
+++ b/TrinityCreator/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="emulator" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="DbcDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
