--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -295,6 +295,9 @@
   <ItemGroup>
     <None Include="Resources\dbclayout.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RandomTips.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
