Limit input value to supported max value
for Item + Quest creator, DDC & Coordinate
- Added bug report link in Info
- DDC uses LostFocus instead of TextChanged to update property
- Coorinate values to int. It's specific enough & avoids issues
- Removed old GenerateQuery code from TrinityQuest
- Fixed credits

--- a/TrinityCreator/TrinityCreator.csproj
+++ b/TrinityCreator/TrinityCreator.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Converters\ValueToVisibilityConverter.cs" />
     <Compile Include="Converters\WeaponSpeedToStringConverter.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="Database\DataType.cs" />
     <Compile Include="Emulator\cmangosZero.cs" />
     <Compile Include="Emulator\EmulatorHandler.cs" />
     <Compile Include="Emulator\IEmulator.cs" />
