--- a/TrinityCreator/packages.config
+++ b/TrinityCreator/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="cef.redist.x64" version="3.2623.1396" targetFramework="net45" />
+  <package id="cef.redist.x86" version="3.2623.1396" targetFramework="net45" />
+  <package id="CefSharp.Common" version="49.0.0" targetFramework="net45" />
+  <package id="CefSharp.Wpf" version="49.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
 </packages>
